--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -338,13 +338,14 @@
 
                                 .elementor-widget-text-editor .elementor-drop-cap-letter {
                                     display: inline-block
-                                }</style>				<p>Tortor scelerisque feugiat nibh ridiculus nisi si. Enim penatibus ac sed primis convallis fames taciti dolor tempor. Faucibus morbi posuere sagittis turpis class vivamus penatibus ornare mollis donec scelerisque.</p>
+                                }</style>
+                            <div class="elementor-widget-container">
+                                <p>James Thew is one of the famous cook working in one of the five star hotels in the city. He is so famous that the publishers approach him to write recipes book, and provide some of the tips pertaining to the recipes, etc. Also some of the producers want him to work for their recipe shows where he needs to cook two or three recipes of different categories like juices, non-vegetarian and vegetarian recipes, Italian recipes, etc.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="elementor-element elementor-element-ea48ef7 elementor-widget elementor-widget-text-editor" data-id="ea48ef7" data-element_type="widget" data-widget_type="text-editor.default">
-                        <div class="elementor-widget-container">
-                            <p>Tortor scelerisque feugiat nibh ridiculus nisi si. Enim penatibus ac sed primis convallis fames taciti dolor tempor. Faucibus morbi posuere sagittis turpis class vivamus penatibus ornare mollis donec scelerisque.</p>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
