--- a/Views/Home/HomePage.cshtml
+++ b/Views/Home/HomePage.cshtml
@@ -310,13 +310,11 @@ left:-10px" data-id="06a0dc9" data-element_type="widget" data-settings="{&quot;_
                     </div>
                     <div class="elementor-element elementor-element-c09b182 elementor-widget elementor-widget-text-editor" data-id="c09b182" data-element_type="widget" data-widget_type="text-editor.default">
                         <div class="elementor-widget-container">
-                            <p>Tortor scelerisque feugiat nibh ridiculus nisi si. Enim penatibus ac sed primis convallis fames taciti dolor tempor. Faucibus morbi posuere sagittis turpis class vivamus penatibus ornare mollis donec scelerisque.</p>
+                            <p>James Thew is one of the famous cook working in one of the five star hotels in the city. He is so famous that the publishers approach him to write recipes book, and provide some of the tips pertaining to the recipes, etc. Also some of the producers want him to work for their recipe shows where he needs to cook two or three recipes of different categories like juices, non-vegetarian and vegetarian recipes, Italian recipes, etc.</p>
                         </div>
                     </div>
                     <div class="elementor-element elementor-element-c48f60d elementor-widget elementor-widget-text-editor" data-id="c48f60d" data-element_type="widget" data-widget_type="text-editor.default">
-                        <div class="elementor-widget-container">
-                            <p>Tortor scelerisque feugiat nibh ridiculus nisi si. Enim penatibus ac sed primis convallis fames taciti dolor tempor. Faucibus morbi posuere sagittis turpis class vivamus penatibus ornare mollis donec scelerisque.</p>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
@@ -787,7 +785,7 @@ left:-10px" data-id="06a0dc9" data-element_type="widget" data-settings="{&quot;_
     </section>
     <section class="elementor-section elementor-top-section elementor-element elementor-element-246ca6d elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="246ca6d" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
         <div class="elementor-background-overlay">
-            <img style="width:100%;height:550px" src="https://point.moxcreative.com/yumma/wp-content/uploads/sites/2/2022/04/home-cooked-happiness-1536x1024.jpg" alt="" />
+            <img style="width:100%;height:550px" src="https://s.net.vn/yHN1" alt="" />
         </div>
         <div class="elementor-container elementor-column-gap-default">
             <div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-24a2bd7 elementor-invisible" style="display:flex;justify-content:center" data-id="24a2bd7" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInUp&quot;}">
@@ -821,7 +819,7 @@ left:-10px" data-id="06a0dc9" data-element_type="widget" data-settings="{&quot;_
                                 <div class="elementor-widget-wrap elementor-element-populated">
                                     <div class="elementor-element elementor-element-aa8c345 elementor-cta--skin-cover elementor-cta--valign-middle elementor-bg-transform elementor-bg-transform-zoom-out elementor-widget elementor-widget-call-to-action" data-id="aa8c345" data-element_type="widget" data-widget_type="call-to-action.default">
                                         <div class="elementor-widget-container" style="    border-style: solid;
-    border-width: 15px 15px 15px 15px;
+    border-width: 14px 14px 14px 14px;
     border-color: var(--e-global-color-text );
     border-radius: 50% 50% 50% 50%;">
                                             <link rel="stylesheet" href="https://point.moxcreative.com/yumma/wp-content/plugins/elementor-pro/assets/css/widget-call-to-action.min.css">		<div class="elementor-cta">
@@ -848,7 +846,7 @@ left:-10px" data-id="06a0dc9" data-element_type="widget" data-settings="{&quot;_
                                 <div class="elementor-widget-wrap elementor-element-populated">
                                     <div class="elementor-element elementor-element-aa8c345 elementor-cta--skin-cover elementor-cta--valign-middle elementor-bg-transform elementor-bg-transform-zoom-out elementor-widget elementor-widget-call-to-action" data-id="aa8c345" data-element_type="widget" data-widget_type="call-to-action.default">
                                         <div class="elementor-widget-container" style="    border-style: solid;
-    border-width: 15px 15px 15px 15px;
+   border-width: 14px 14px 14px 14px;
     border-color: var(--e-global-color-text );
     border-radius: 50% 50% 50% 50%;">
                                             <link rel="stylesheet" href="https://point.moxcreative.com/yumma/wp-content/plugins/elementor-pro/assets/css/widget-call-to-action.min.css">		<div class="elementor-cta">
@@ -874,7 +872,7 @@ left:-10px" data-id="06a0dc9" data-element_type="widget" data-settings="{&quot;_
                                 <div class="elementor-widget-wrap elementor-element-populated">
                                     <div class="elementor-element elementor-element-aa8c345 elementor-cta--skin-cover elementor-cta--valign-middle elementor-bg-transform elementor-bg-transform-zoom-out elementor-widget elementor-widget-call-to-action" data-id="aa8c345" data-element_type="widget" data-widget_type="call-to-action.default">
                                         <div class="elementor-widget-container" style="    border-style: solid;
-    border-width: 15px 15px 15px 15px;
+   border-width: 14px 14px 14px 14px;
     border-color: var(--e-global-color-text );
     border-radius: 50% 50% 50% 50%;">
                                             <link rel="stylesheet" href="https://point.moxcreative.com/yumma/wp-content/plugins/elementor-pro/assets/css/widget-call-to-action.min.css">		<div class="elementor-cta">
@@ -900,7 +898,7 @@ left:-10px" data-id="06a0dc9" data-element_type="widget" data-settings="{&quot;_
                                 <div class="elementor-widget-wrap elementor-element-populated">
                                     <div class="elementor-element elementor-element-aa8c345 elementor-cta--skin-cover elementor-cta--valign-middle elementor-bg-transform elementor-bg-transform-zoom-out elementor-widget elementor-widget-call-to-action" data-id="aa8c345" data-element_type="widget" data-widget_type="call-to-action.default">
                                         <div class="elementor-widget-container" style="    border-style: solid;
-    border-width: 15px 15px 15px 15px;
+    border-width: 14px 14px 14px 14px;
     border-color: var(--e-global-color-text );
     border-radius: 50% 50% 50% 50%;">
                                             <link rel="stylesheet" href="https://point.moxcreative.com/yumma/wp-content/plugins/elementor-pro/assets/css/widget-call-to-action.min.css">		<div class="elementor-cta">
@@ -1483,10 +1481,12 @@ left:-10px" data-id="06a0dc9" data-element_type="widget" data-settings="{&quot;_
                 </div>
     </section>
 </div>
+       </div>          
         </div>
+               </div>
                             </div>
-
-        </section>
+                    </section>
+       
 
 
 <section class="elementor-section elementor-top-section elementor-element elementor-element-efe9885 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="efe9885" data-element_type="section">
@@ -1510,7 +1510,7 @@ left:-10px" data-id="06a0dc9" data-element_type="widget" data-settings="{&quot;_
                                 <div class="elementor-element elementor-element-a9d60ed elementor-widget elementor-widget-button" data-id="a9d60ed" data-element_type="widget" data-widget_type="button.default">
                                     <div class="elementor-widget-container">
                                         <div class="elementor-button-wrapper">
-                                            <a class="elementor-button elementor-button-link elementor-size-md" href="#">
+                                            <a class="elementor-button elementor-button-link elementor-size-md" href="/Home/PricingPlan">
                                                 <span class="elementor-button-content-wrapper">
                                                     <span class="elementor-button-text">Join Now</span>
                                                 </span>
