--- a/Views/Home/Team.cshtml
+++ b/Views/Home/Team.cshtml
@@ -86,12 +86,12 @@
 						<div class="elementor-widget-container">
 							<link rel="stylesheet" href="~/wp-content/plugins/elementor-pro/assets/css/widget-posts.min.css">		<div class="elementor-posts-container elementor-posts elementor-posts--skin-classic elementor-grid">
 								<article class="elementor-post elementor-grid-item post-1220 envato_tk_templates type-envato_tk_templates status-publish has-post-thumbnail hentry">
-									<a class="elementor-post__thumbnail__link" href="homepage/index.html">
+									<a class="elementor-post__thumbnail__link" href="/Home/HomePage">
 										<div class="elementor-post__thumbnail"><img width="1080" height="6284" src="~/wp-content/uploads/sites/2/2022/04/Homepage.jpg" class="attachment-full size-full wp-image-1314" alt="" loading="lazy" /></div>
 									</a>
 									<div class="elementor-post__text">
 										<h3 class="elementor-post__title">
-											<a href="homepage/index.html">
+											<a href="/Home/HomePage">
 												Homepage
 											</a>
 										</h3>
@@ -107,19 +107,19 @@
 											<p>Boiled Steamed Fried Baked no matter how you cook, Yumma has many the recipes Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus,</p>
 										</div>
 
-										<a class="elementor-post__read-more" href="homepage/index.html">
+										<a class="elementor-post__read-more" href="/Home/HomePage">
 											Read More 🡥
 										</a>
 
 									</div>
 								</article>
 								<article class="elementor-post elementor-grid-item post-1111 envato_tk_templates type-envato_tk_templates status-publish has-post-thumbnail hentry">
-									<a class="elementor-post__thumbnail__link" href="join-contributor/index.html">
+									<a class="elementor-post__thumbnail__link" href="/Home/JoinContriButor">
 										<div class="elementor-post__thumbnail"><img width="1600" height="3368" src="~/wp-content/uploads/sites/2/2022/04/Join-Contributor.jpg" class="attachment-full size-full wp-image-1315" alt="" loading="lazy" /></div>
 									</a>
 									<div class="elementor-post__text">
 										<h3 class="elementor-post__title">
-											<a href="join-contributor/index.html">
+											<a href="/Home/JoinContriButor">
 												Join Contributor
 											</a>
 										</h3>
@@ -135,19 +135,19 @@
 											<p>Join Contributor Interested to share your recipes? Netus tempor ex feugiat mauris consectetuer primis aliquet tempus viverra purus. Lacinia arcu habitant vehicula condimentum cras venenatis</p>
 										</div>
 
-										<a class="elementor-post__read-more" href="join-contributor/index.html">
+										<a class="elementor-post__read-more" href="/Home/JoinContributor">
 											Read More 🡥
 										</a>
 
 									</div>
 								</article>
 								<article class="elementor-post elementor-grid-item post-983 envato_tk_templates type-envato_tk_templates status-publish has-post-thumbnail hentry">
-									<a class="elementor-post__thumbnail__link" href="single-recipe/index.html">
+									<a class="elementor-post__thumbnail__link" href="/Home/SingleRecipe">
 										<div class="elementor-post__thumbnail"><img width="1600" height="3240" src="~/wp-content/uploads/sites/2/2022/04/Single-Recipes.jpg" class="attachment-full size-full wp-image-1319" alt="" loading="lazy" /></div>
 									</a>
 									<div class="elementor-post__text">
 										<h3 class="elementor-post__title">
-											<a href="single-recipe/index.html">
+											<a href="/Home/SingleRecipe">
 												Single Recipe
 											</a>
 										</h3>
@@ -163,19 +163,19 @@
 											<p>Drink Recipes The Real Mojito 187 Reviews &#9733;&#9733;&#9733;&#9733;&#9733; 4.5/5 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar</p>
 										</div>
 
-										<a class="elementor-post__read-more" href="single-recipe/index.html">
+										<a class="elementor-post__read-more" href="/Home/SingleRecipe">
 											Read More 🡥
 										</a>
 
 									</div>
 								</article>
 								<article class="elementor-post elementor-grid-item post-713 envato_tk_templates type-envato_tk_templates status-publish has-post-thumbnail hentry">
-									<a class="elementor-post__thumbnail__link" href="recipes-list/index.html">
+									<a class="elementor-post__thumbnail__link" href="/Home/RecipeList">
 										<div class="elementor-post__thumbnail"><img width="1080" height="3825" src="~/wp-content/uploads/sites/2/2022/04/Recipe-List.jpg" class="attachment-full size-full wp-image-1317" alt="" loading="lazy" /></div>
 									</a>
 									<div class="elementor-post__text">
 										<h3 class="elementor-post__title">
-											<a href="recipes-list/index.html">
+											<a href="/Home/RecipeList">
 												Recipes List
 											</a>
 										</h3>
@@ -191,19 +191,19 @@
 											<p>What are your favorite food? Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Popular search</p>
 										</div>
 
-										<a class="elementor-post__read-more" href="recipes-list/index.html">
+										<a class="elementor-post__read-more" href="/Home/RecipeList">
 											Read More 🡥
 										</a>
 
 									</div>
 								</article>
 								<article class="elementor-post elementor-grid-item post-569 envato_tk_templates type-envato_tk_templates status-publish has-post-thumbnail hentry">
-									<a class="elementor-post__thumbnail__link" href="about-us/index.html">
+									<a class="elementor-post__thumbnail__link" href="/Home/AboutUs">
 										<div class="elementor-post__thumbnail"><img width="1600" height="4635" src="~/wp-content/uploads/sites/2/2022/04/About-Us.jpg" class="attachment-full size-full wp-image-1307" alt="" loading="lazy" /></div>
 									</a>
 									<div class="elementor-post__text">
 										<h3 class="elementor-post__title">
-											<a href="about-us/index.html">
+											<a href="/Home/AboutUs">
 												About Us
 											</a>
 										</h3>
@@ -219,19 +219,19 @@
 											<p>Beyond the boundaries of taste. “Ask not what you can do for your country. Ask what’s for lunch.” &#8211; Orson Welles Who we are One</p>
 										</div>
 
-										<a class="elementor-post__read-more" href="about-us/index.html">
+										<a class="elementor-post__read-more" href="/Home/AboutUs">
 											Read More 🡥
 										</a>
 
 									</div>
 								</article>
 								<article class="elementor-post elementor-grid-item post-479 envato_tk_templates type-envato_tk_templates status-publish has-post-thumbnail hentry">
-									<a class="elementor-post__thumbnail__link" href="pricing-plan/index.html">
+									<a class="elementor-post__thumbnail__link" href="/Home/PricingPlan">
 										<div class="elementor-post__thumbnail"><img width="1600" height="3189" src="~/wp-content/uploads/sites/2/2022/04/Pricing-Plan.jpg" class="attachment-full size-full wp-image-1316" alt="" loading="lazy" /></div>
 									</a>
 									<div class="elementor-post__text">
 										<h3 class="elementor-post__title">
-											<a href="pricing-plan/index.html">
+											<a href="/Home/PricingPlan">
 												Pricing Plan
 											</a>
 										</h3>
@@ -247,19 +247,19 @@
 											<p>Pricing plan Choose your plan &#038; Try for free with a 30-day trial Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus</p>
 										</div>
 
-										<a class="elementor-post__read-more" href="pricing-plan/index.html">
+										<a class="elementor-post__read-more" href="/Home/PricingPlan">
 											Read More 🡥
 										</a>
 
 									</div>
 								</article>
 								<article class="elementor-post elementor-grid-item post-371 envato_tk_templates type-envato_tk_templates status-publish has-post-thumbnail hentry">
-									<a class="elementor-post__thumbnail__link" href="team/index.html">
+									<a class="elementor-post__thumbnail__link" href="/Home/Team">
 										<div class="elementor-post__thumbnail"><img width="1600" height="2702" src="~/wp-content/uploads/sites/2/2022/04/Team.jpg" class="attachment-full size-full wp-image-1320" alt="" loading="lazy" /></div>
 									</a>
 									<div class="elementor-post__text">
 										<h3 class="elementor-post__title">
-											<a href="team/index.html">
+											<a href="/Home/Team">
 												Team
 											</a>
 										</h3>
@@ -275,19 +275,19 @@
 											<p>If you can laugh together, you can work together. Meet our team It takes two flints to make a fire. Reuben Palmer Founder Danielle George</p>
 										</div>
 
-										<a class="elementor-post__read-more" href="team/index.html">
+										<a class="elementor-post__read-more" href="/Home/Team">
 											Read More 🡥
 										</a>
 
 									</div>
 								</article>
 								<article class="elementor-post elementor-grid-item post-254 envato_tk_templates type-envato_tk_templates status-publish has-post-thumbnail hentry">
-									<a class="elementor-post__thumbnail__link" href="faq/index.html">
+									<a class="elementor-post__thumbnail__link" href="/Home/FAQ">
 										<div class="elementor-post__thumbnail"><img width="1600" height="3626" src="~/wp-content/uploads/sites/2/2022/04/FAQ.jpg" class="attachment-full size-full wp-image-1311" alt="" loading="lazy" /></div>
 									</a>
 									<div class="elementor-post__text">
 										<h3 class="elementor-post__title">
-											<a href="faq/index.html">
+											<a href="/Home/FAQ">
 												FAQ
 											</a>
 										</h3>
@@ -303,19 +303,19 @@
 											<p>Frequently Asked Questions We&#8217;re here to help you Basic Knowledge Vitae finibus tincidunt dictum integer elit facilisis. Posuere phasellus auctor tortor sodales mauris aenean suspendisse</p>
 										</div>
 
-										<a class="elementor-post__read-more" href="faq/index.html">
+										<a class="elementor-post__read-more" href="/Home/FAQ">
 											Read More 🡥
 										</a>
 
 									</div>
 								</article>
 								<article class="elementor-post elementor-grid-item post-141 envato_tk_templates type-envato_tk_templates status-publish has-post-thumbnail hentry">
-									<a class="elementor-post__thumbnail__link" href="contact-us/index.html">
+									<a class="elementor-post__thumbnail__link" href="/Home/ContactUs">
 										<div class="elementor-post__thumbnail"><img width="1600" height="3234" src="~/wp-content/uploads/sites/2/2022/04/Contact-Us.jpg" class="attachment-full size-full wp-image-1309" alt="" loading="lazy" /></div>
 									</a>
 									<div class="elementor-post__text">
 										<h3 class="elementor-post__title">
-											<a href="contact-us/index.html">
+											<a href="/Home/ContactUs">
 												Contact Us
 											</a>
 										</h3>
@@ -331,7 +331,7 @@
 											<p>We would love to hear from you. Send us a message Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper</p>
 										</div>
 
-										<a class="elementor-post__read-more" href="contact-us/index.html">
+										<a class="elementor-post__read-more" href="/Home/ContactUs">
 											Read More 🡥
 										</a>
 
