--- a/Views/Home/JoinContributor.cshtml
+++ b/Views/Home/JoinContributor.cshtml
@@ -312,7 +312,7 @@
 									<div class="elementor-element elementor-element-7f21005 elementor-widget elementor-widget-button" data-id="7f21005" data-element_type="widget" data-widget_type="button.default">
 										<div class="elementor-widget-container">
 											<div class="elementor-button-wrapper">
-												<a class="elementor-button elementor-button-link elementor-size-md" href="#">
+												<a class="elementor-button elementor-button-link elementor-size-md" href="/Home/PricingPlan">
 													<span class="elementor-button-content-wrapper">
 														<span class="elementor-button-text">Join Now</span>
 													</span>
