--- a/Views/Shared/_LayoutAdmin.cshtml
+++ b/Views/Shared/_LayoutAdmin.cshtml
@@ -24,10 +24,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Favicon icon -->
-    <link rel="icon" type="image/png" href="~/images/favicon.png">
-    <link href="~/vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet" type="text/css"/>
-    <link href="~/2.0/LineIcons.css" rel="stylesheet" type="text/css"/>
-    <link href="~/css/style.css" rel="stylesheet" type="text/css"/>
+    <link rel="icon" type="image/png" href="../images/favicon.png">
+    <link href="../vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet" type="text/css"/>
+    <link href="../2.0/LineIcons.css" rel="stylesheet" type="text/css"/>
+    <link href="../css/style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 
@@ -44,9 +44,9 @@
     <div id="main-wrapper">
         <div class="nav-header">
             <a href="index-2.html" class="brand-logo">
-                <img class="logo-abbr" src="~/images/logo-text2.png" alt="">
-                <img class="logo-compact" src="~/images/logo-text.png" alt="">
-                <img class="brand-title" src="~/images/logo-text.png" alt="">
+                <img class="logo-abbr" src="../images/logo-text2.png" alt="">
+                <img class="logo-compact" src="../images/logo-text.png" alt="">
+                <img class="brand-title" src="../images/logo-text.png" alt="">
             </a>
             <div class="nav-control">
                 <div class="hamburger">
@@ -768,13 +768,13 @@
     </div>
 
     <!-- Required vendors -->
-    <script src="~/vendor/global/global.min.js" type="text/javascript"></script>
-    <script src="~/vendor/bootstrap-select/dist/js/bootstrap-select.min.js" type="text/javascript"></script>
-    <script src="~/vendor/chart-js/chart.bundle.min.js" type="text/javascript"></script>
-    <script src="~/vendor/apexchart/apexchart.js" type="text/javascript"></script>
-    <script src="~/js/dashboard/dashboard-1.js" type="text/javascript"></script>
-    <script src="~/js/custom.min.js" type="text/javascript"></script>
-    <script src="~/js/deznav-init.js" type="text/javascript"></script>
+    <script src="../vendor/global/global.min.js" type="text/javascript"></script>
+    <script src="../vendor/bootstrap-select/dist/js/bootstrap-select.min.js" type="text/javascript"></script>
+    <script src="../vendor/chart-js/chart.bundle.min.js" type="text/javascript"></script>
+    <script src="../vendor/apexchart/apexchart.js" type="text/javascript"></script>
+    <script src="../js/dashboard/dashboard-1.js" type="text/javascript"></script>
+    <script src="../js/custom.min.js" type="text/javascript"></script>
+    <script src="../js/deznav-init.js" type="text/javascript"></script>
 
 </body>
 
